--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "supertest": "^3.0.0"
   },
   "devDependencies": {
-    "ejs": "^2.5.7"
+    "ejs": "^2.5.7",
+    "eslint": "^4.11.0",
+    "eslint-plugin-react": "^7.4.0"
   }
 }
