--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "node ./node_modules/babel-cli/bin/babel.js ./server -d  dist",
+    "migrate": "node ./node_modules/sequelize-cli/lib/sequelize db:migrate",
+    "heroku-postbuild": "npm run build && npm run migrate",
     "start": "node ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +21,7 @@
     "chai-http": "^3.0.0",
     "coveralls": "^3.0.0",
     "dotenv": "^4.0.0",
+    "ejs": "^2.5.7",
     "eslint": "^4.10.0",
     "eslint-config-recommended": "^1.5.0",
     "express": "^4.16.2",
