--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node ./node_modules/babel-cli/bin/babel.js ./server -d  dist",
+    "build": "node ./node_modules/babel-cli/bin/babel.js ./server/ -d  dist",
     "migrate": "node ./node_modules/sequelize-cli/lib/sequelize db:migrate",
     "heroku-postbuild": "npm run build && npm run migrate",
     "start": "node ./dist/app.js",
