--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "ejs": "^2.5.7",
+    "eslint": "^4.11.0",
+    "eslint-plugin-react": "^7.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "coveralls": "^3.0.0",
     "dotenv": "^4.0.0",
-    "ejs": "^2.5.7",
-    "eslint": "^4.10.0",
     "eslint-config-recommended": "^1.5.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
@@ -39,8 +41,6 @@
     "supertest": "^3.0.0"
   },
   "devDependencies": {
-    "ejs": "^2.5.7",
-    "eslint": "^4.11.0",
-    "eslint-plugin-react": "^7.4.0"
+    
   }
 }
